syntax = "proto3";

package com.shopping.stubs.user;

option java_package = "com.shopping.stubs.user";
option java_multiple_files = true;

service UserService {
  rpc getUserDetails(UserRequest) returns (UserResponse);
  rpc saveUser(UserRequestSave) returns (UserResponseSave);
}

message UserRequestSave {
  int32 id = 1;
  string username = 2;
  string password = 3;
  string name = 4;
  string gender = 5;
  int32 age = 6;
}

message UserResponseSave {
  string username = 1;
  string password = 2;
  string name = 3;
  string gender = 4;
  int32 age = 5;
}

message UserRequest {
  string username  = 1;
}

message UserResponse {
  int32 id = 1;
  string username = 2;
  string name = 3;
  int32 age = 4;
  Gender gender = 5;
  int32 no_of_orders = 6;
}

enum Gender {
  MALE = 0;
  FEMALE = 1;
  OTHER = 3;
}